--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,8 @@
     <!-- lightbox -->
     <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
 
-    <title>Tuto Estate</title>
+    <title>Tuto Estate {% block title %}
+    {% endblock title %} </title>
 </head>
 
 <body>
