--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="{% url 'about' %}">About</a>
                     </li>
                     <li  
-                        {% if 'listings' == request.path  %}
+                        {% if '/listings' == request.path  %}
                             class="nav-item active mr-3">
                         {% else %}
                             class="nav-item mr-3">
@@ -38,16 +38,49 @@
                 </ul>
 
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item mr-3">
-                        <a class="nav-link" href="register.html">
-                            <i class="fas fa-user-plus"></i> Register</a>
-                    </li>
-                    <li class="nav-item mr-3">
-                        <a class="nav-link" href="login.html">
-                            <i class="fas fa-sign-in-alt"></i>
+                    {% if user.is_authenticated %}
+                        <li 
+                            {% if '/accounts/deshboard' == request.path  %}
+                                class="nav-item active mr-3">
+                            {% else %}
+                                class="nav-item mr-3">
+                            {% endif %}
+                        
+                            <a class="nav-link" href="{% url 'deshboard' %}">
+                                Welcome {{user.username}} (Deshboard)
+                            </a>
+                        </li>
+                        <li class="nav-item mr-3">
+                            <a class="nav-link" href="javascript:{document.getElementById('logout').submit()}">
+                                <i class="fas fa-sign-out-alt"></i>Logout
+                            </a>
+                            <form action="{%url 'logout'%}" method="POST" id="logout">
+                                {% csrf_token %}
+                                <input type="hidden">
+                            </form>
+                        </li> 
+                    {% else %}
+                        <li 
+                            {% if '/accounts/register' == request.path  %}
+                                class="nav-item active mr-3">
+                            {% else %}
+                                class="nav-item mr-3">
+                            {% endif %}
+                            <a class="nav-link" href="{% url 'register' %}">
+                                <i class="fas fa-user-plus"></i> Register</a>
+                        </li>
+                        <li 
+                            {% if '/accounts/login' == request.path  %}
+                                class="nav-item active mr-3">
+                            {% else %}
+                                class="nav-item mr-3">
+                            {% endif %}
+                            <a class="nav-link" href="{% url 'login' %}">
+                                <i class="fas fa-sign-in-alt"></i>
 
-                            Login</a>
-                    </li>
+                                Login</a>
+                        </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
