realestate name update

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <!-- lightbox -->
     <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
 
-    <title>Tuto Estate {% block title %}
+    <title>realestate {% block title %}
     {% endblock title %} </title>
 </head>
 
