--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -4,7 +4,7 @@
 {% block branding %}
 
 <h1 id='head'> 
-    <img src="{% static 'img/logo.png'%}" alt='TutO Estate' height='50' width='80' class='brand_img'>
+    <img src="{% static 'img/logo.png'%}" alt=' realestate' height='50' width='80' class='brand_img'>
     Admin
 </h1>
 
